# justgraph

./: .gitignore  README.md  main.py  pyproject.toml
examples/: chat.py  conditional.py  fan_out.py
src/justgraph/: __init__.py  compiled.py  graph.py  main.py  models.py  reducers.py
tests/: test_edge_cases.py  test_fan_out.py
