[project]
name = "justgraph"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "NovaH00", email = "trantay2006super@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "returns>=0.28.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
