[project]
name = "justgraph"
version = "0.2.0"
description = "A lightweight graph-based state machine."
readme = "README.md"
authors = [
    { name = "NovaH00", email = "trantay2006super@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
